--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
-.btn>button{
-	
-	background-color:black;
-	color:white;
-	border-radius:10px;
-	border:none;
+button{
+	background-color:rgb(0, 0, 0);
+	color:rgb(255, 255, 255);
+	border-radius:5px;
+	border:0px none rgb(255, 255, 255);
 }
 button:hover{
 	background-color:yellow;
-	fontcolor:black;
+	color:black;
 	border-radius:30px;
+	border:0px none rgb(255, 255, 255)
 }
 /* Your CSS Code here. */
